--- a/apps/blog/templates/blog/tags/navbar.html
+++ b/apps/blog/templates/blog/tags/navbar.html
@@ -39,6 +39,7 @@
                 {% url 'monitor:demo' as monitor_demo_url %}
                 {% url 'portinfo:index' as portinfo_url %}
                 {% url 'blog:health' as health_url %}
+                {% url 'flow:index' as flow_url %}
                 <a class="nav-link dropdown-toggle py-md-3 {% if request.path == webstack_index_url or request.path == feed_hub_url or request.path == health_url or request.path == monitor_demo_url or request.path == portinfo_url %}active{% endif %}"
                    href="#"
                    id="more-link"
@@ -60,6 +61,8 @@
                                     class="fa fa-fw fa-street-view text-info mr-2"></i>运动看板</a>
                     <a class="dropdown-item pl-3" href="{{ portinfo_url }}"><i
                                     class="fa fa-fw fa-bullseye text-info mr-2"></i>端口大全</a>
+                    <a class="dropdown-item pl-3" href="{{ flow_url }}"><i
+                                    class="fa fa-fw fa-exchange text-info mr-2"></i>流程设计</a>
                 </div>
             </li>
             <!-- 个人外链 -->
