feat: 流程图页面隐藏原logo

--- a/apps/flow/templates/flow/view.html
+++ b/apps/flow/templates/flow/view.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="{% static 'flow/css/bpmn-js@18.2.0/diagram-js.css' %}">
     <link rel="stylesheet" href="{% static 'flow/css/bpmn-js@18.2.0/bpmn.css' %}">
     <link rel="stylesheet" href="{% static 'flow/css/style.css' %}">
+    <style>
+        .bjs-powered-by {
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="container-fullscreen view-container">
