--- a/apps/flow/templates/flow/index.html
+++ b/apps/flow/templates/flow/index.html
@@ -63,6 +63,6 @@
         window.location.href = "/";
     }
 </script>
-<script src="{% static 'flow/js/index.js' %}"></script>
+<script src="{% static 'flow/js/index.js' %}?v=20250221.01"></script>
 </body>
 </html>
