--- a/apps/flow/templates/flow/index.html
+++ b/apps/flow/templates/flow/index.html
@@ -65,7 +65,7 @@
 </script>
 {% csrf_token %}
 <script>
-    window.isAdmin = {{ is_admin|lower }};
+    window.isAdmin = "{{ is_admin|lower }}" === "true";
 </script>
 <script src="{% static 'flow/js/admin/api.js' %}?v=20240221"></script>
 <script src="{% static 'flow/js/admin/storage.js' %}?v=20240221"></script>
