style: 文章内容支持mermaid流程图

--- a/apps/blog/templates/blog/subjectDetail.html
+++ b/apps/blog/templates/blog/subjectDetail.html
@@ -56,7 +56,7 @@
         #article-print:hover {
             cursor: pointer;
         }
-        .mermaid {text-align: center;margin-top: 1.5rem;margin-bottom: 1.5rem;}
+        .mermaid {text-align: center;margin-top: 1.5rem;margin-bottom: 1.5rem;background: white;}
     </style>
 {% endblock %}
 
