--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -33,7 +33,7 @@
     <link href="{% static 'blog/css/detail.css' %}?v={{ static_version.css_blog_detail }}" rel="stylesheet">
     <link href="{% static 'blog/css/monokai-3.css' %}?v=20241202.1" rel="stylesheet">
     <link href="{% static 'comment/css/base_comment.css' %}?v=20190114.554" rel="stylesheet">
-    <style>.mermaid {text-align: center;margin-top: 1.5rem;margin-bottom: 1.5rem;background: white;}</style>
+    <style>.mermaid {text-align: center;margin-top: 1.5rem;margin-bottom: 1.5rem;background: white;padding: 0.8rem;}</style>
 {% endblock %}
 
 {% block base_content %}
