style(blog): 高度单词写错

--- a/apps/blog/static/blog/css/base.css
+++ b/apps/blog/static/blog/css/base.css
@@ -362,7 +362,7 @@ ul.checklist li {
 
 .summary-list .avatar {
     width: 1.2rem;
-    heigth: 1.2rem;
+    height: 1.2rem;
     margin-right: .2rem;
     border-radius: 50%;
 }
@@ -1119,7 +1119,7 @@ div.archive > ul > li > ul {
 
     .summary-list .avatar {
         width: 1.35rem;
-        heigth: 1.35rem;
+        height: 1.35rem;
     }
 
     .get-msg {
@@ -1206,7 +1206,7 @@ div.archive > ul > li > ul {
 
     .summary-list .avatar {
         width: 1.5rem;
-        heigth: 1.5rem;
+        height: 1.5rem;
     }
 
     #navbarDropdown .avatar {
